# ACore

./: README.md
allocator/: Cargo.toml
allocator/src/: buddy_allocator.rs  lib.rs
kernel/: .gitignore  Cargo.toml  Makefile
kernel/src/: config.rs  console.rs  entry.asm  exception.rs  link_app.S  loader.rs  logging.rs  main.rs
kernel/src/drivers/: sbi.rs
kernel/src/mm/: address.rs  buffer.rs  frame_allocator.rs  heap_allocator.rs  memory_area.rs  mod.rs  page_table.rs
kernel/src/syscall/: fs.rs  mod.rs  process.rs
kernel/src/task/: manager.rs  mod.rs  pid.rs  processor.rs  scheduler.rs  stack.rs  switch.S  task.rs
kernel/src/time/: mod.rs  trap.S
kernel/src/trap/: context.rs  mod.rs  trampoline.S  trap.S
os/: Cargo.toml  Makefile
os/src/: config.rs  console.rs  entry.asm  exception.rs  linker.ld  main.rs  sbi.rs
os/src/drivers/: sbi.rs
os/src/mm/: address.rs  buddy_allocator.rs  frame_allocator.rs  heap_allocator.rs  linked_list.rs  memory_area.rs  mod.rs  page_table.rs  range.rs
os/src/sync/: up.rs
sync/src/: lib.rs  up.rs
user/: Cargo.toml
user/src/: exception.rs  lib.rs  syscall.rs
user/src/process/: buffer.rs  manager.rs  mod.rs  pid.rs  process.rs
