[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = "0.11.1"
allocator = { path = "../allocator" }
sync = { path = "../sync" }
bitflags = "1.2.1"
log = "0.4"
xmas-elf = "0.7.0"
buddy_system_allocator = "0.6"

[profile.release]
debug = true
